--- a/contact.html
+++ b/contact.html
@@ -316,7 +316,7 @@
             </div>
           </div>
           <div class="cartmini__shipping">
-            <p>Free Shipping for all orders over <span>$50</span></p>
+            <p>Free Shipping for all orders over <span>INR5000</span></p>
             <div class="progress">
               <div
                 class="progress-bar progress-bar-striped progress-bar-animated"
@@ -340,7 +340,7 @@
                   <a href="product-details.html">Level Bolt Smart Lock</a>
                 </h5>
                 <div class="cartmini__price-wrapper">
-                  <span class="cartmini__price">$46.00</span>
+                  <span class="cartmini__price">INR4600.00</span>
                   <span class="cartmini__quantity">x2</span>
                 </div>
               </div>
@@ -360,7 +360,7 @@
         <div class="cartmini__checkout">
           <div class="cartmini__checkout-title mb-30">
             <h4>Subtotal:</h4>
-            <span>$113.00</span>
+            <span>INR1130.00</span>
           </div>
           <div class="cartmini__checkout-btn">
             <a href="cart.html" class="tp-btn mb-10 w-100"> view cart</a>
