--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/letter-k (1).png"
     />
 
     <link
@@ -30,6 +30,25 @@
     <link rel="stylesheet" href="assets/css/spacing.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
+
+  <!-- Add responsive CSS -->
+  <style>
+    @media (max-width: 768px) {
+      .tp-category-slider-active-2 {
+        margin-left: -15px;
+        margin-right: -15px;
+      }
+
+      .tp-category-item-2 {
+        margin: 0 15px; /* Spacing for mobile view */
+      }
+
+      .tp-category-thumb-2 img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  </style>
 
   <style>
     @media (max-width: 768px) {
@@ -461,10 +480,9 @@
     <![endif]-->
 
     <!-- pre loader area start -->
-    <div id="loading">
+    <!-- <div id="loading">
       <div id="loading-center">
         <div id="loading-center-absolute">
-          <!-- loading content here -->
           <div class="tp-preloader-content">
             <div class="tp-preloader-logo">
               <div class="tp-preloader-circle">
@@ -500,7 +518,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- pre loader area end -->
 
     <!-- back to top start -->
@@ -647,7 +665,7 @@
         <div class="row row-cols-5">
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <a href="shop.html" class="tp-mobile-item-btn">
+              <a href="shop-masonary.html" class="tp-mobile-item-btn">
                 <i class="flaticon-store"></i>
                 <span>Store</span>
               </a>
@@ -655,16 +673,19 @@
           </div>
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <button class="tp-mobile-item-btn tp-search-open-btn">
+              <a href="shop.html" class="tp-mobile-item-btn">
+                <!-- <button class="tp-mobile-item-btn tp-search-open-btn"> -->
                 <i class="flaticon-search-1"></i>
                 <span>Search</span>
-              </button>
+              </a>
+              <!-- </button> -->
             </div>
           </div>
           <div class="col">
             <div class="tp-mobile-item text-center">
               <a href="wishlist.html" class="tp-mobile-item-btn">
                 <i class="flaticon-love"></i>
+
                 <span>Wishlist</span>
               </a>
             </div>
@@ -855,7 +876,7 @@
                         id="tp-header-lang-toggle"
                         >English</span
                       >
-                      <ul>
+                      <!-- <ul>
                         <li>
                           <a href="#">Spanish</a>
                         </li>
@@ -865,15 +886,15 @@
                         <li>
                           <a href="#">Portuguese</a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                     <div class="tp-header-top-menu-item tp-header-currency">
                       <span
                         class="tp-header-currency-toggle"
                         id="tp-header-currency-toggle"
-                        >USD</span
+                        >INR</span
                       >
-                      <ul>
+                      <!-- <ul>
                         <li>
                           <a href="#">EUR</a>
                         </li>
@@ -886,7 +907,7 @@
                         <li>
                           <a href="#">KWD</a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                     <div class="tp-header-top-menu-item tp-header-setting">
                       <span
@@ -2351,7 +2372,7 @@
       <!-- offer section end -->
 
       <!-- category area start -->
-      <section class="tp-category-area pb-95 pt-95" style="margin-top: -80px">
+      <!-- <section class="tp-category-area pb-95 pt-95" style="margin-top: -80px">
         <div class="container">
           <div class="row">
             <div class="col-xl-12">
@@ -2564,8 +2585,190 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- category area end -->
+
+      <section class="tp-category-area pb-95 pt-95" style="margin-top: -80px">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12">
+              <div class="tp-section-title-wrapper-2 text-center mb-50">
+                <span class="tp-section-title-pre-2">
+                  Shop by Category
+                  <svg
+                    width="82"
+                    height="22"
+                    viewBox="0 0 82 22"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M81 14.5798C0.890564 -8.05914 -5.81154 0.0503902 5.00322 21"
+                      stroke="currentColor"
+                      stroke-opacity="0.3"
+                      stroke-width="2"
+                      stroke-miterlimit="3.8637"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                </span>
+                <h3 class="tp-section-title-2">
+                  Popular on the Khazoor store.
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xl-12">
+              <div class="tp-category-slider-2">
+                <div class="tp-category-slider-active-2 swiper-container mb-50">
+                  <div class="swiper-wrapper">
+                    <!-- Swiper slides -->
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
+                          alt="Product Image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                            >Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Repeat the tp-category-item-2 block for other images -->
+                    <!-- Example for other products -->
+                    <!-- 2nd Image -->
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/LBL101KS437_2_1200x.jpg?v=1735980799"
+                          alt="Product Image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                            >Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                    <!-- 3rd Image -->
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4230_0cbb5518-8fdc-400b-9478-9a883fca53d4_1200x.jpg?v=1735979921"
+                          alt="Product Image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                            >Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Additional slides can be added here -->
+                    <!-- 2nd Image -->
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/LBL101KS437_2_1200x.jpg?v=1735980799"
+                          alt="Product Image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                            >Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                    <!-- 3rd Image -->
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4230_0cbb5518-8fdc-400b-9478-9a883fca53d4_1200x.jpg?v=1735979921"
+                          alt="Product Image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                            >Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- product area start -->
       <section class="tp-product-area pb-90">
@@ -12512,5 +12715,29 @@
     <script src="assets/js/imagesloaded-pkgd.js"></script>
     <script src="assets/js/ajax-form.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <!-- Add the Swiper.js initialization script -->
+    <script>
+      var swiper = new Swiper(".tp-category-slider-active-2", {
+        slidesPerView: 2, // Shows 2 images at a time
+        spaceBetween: 30, // Adjust the space between images
+        loop: true, // Loop through slides
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          1024: {
+            slidesPerView: 2, // 2 images for large screens
+          },
+          768: {
+            slidesPerView: 2, // 2 images for medium screens
+          },
+          480: {
+            slidesPerView: 1, // 1 image for small screens
+          },
+        },
+      });
+    </script>
   </body>
 </html>
