--- a/product-details.html
+++ b/product-details.html
@@ -11,7 +11,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/letter-k (1).png"
     />
 
     <!-- CSS here -->
@@ -35,10 +35,9 @@
     <![endif]-->
 
     <!-- pre loader area start -->
-    <div id="loading">
+    <!-- <div id="loading">
       <div id="loading-center">
         <div id="loading-center-absolute">
-          <!-- loading content here -->
           <div class="tp-preloader-content">
             <div class="tp-preloader-logo">
               <div class="tp-preloader-circle">
@@ -74,7 +73,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- pre loader area end -->
 
     <!-- back to top start -->
