--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/letter-k (1).png"
     />
 
     <!-- CSS here -->
@@ -35,10 +35,9 @@
     <![endif]-->
 
     <!-- pre loader area start -->
-    <div id="loading">
+    <!-- <div id="loading">
       <div id="loading-center">
         <div id="loading-center-absolute">
-          <!-- loading content here -->
           <div class="tp-preloader-content">
             <div class="tp-preloader-logo">
               <div class="tp-preloader-circle">
@@ -74,7 +73,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- pre loader area end -->
 
     <!-- back to top start -->
@@ -173,21 +172,25 @@
               <span
                 class="offcanvas__currency-selected-currency tp-currency-toggle"
                 id="tp-offcanvas-currency-toggle"
-                >Currency : USD</span
+                >Currency : INR</span
               >
-              <ul class="offcanvas__currency-list tp-currency-list">
+              <!-- <ul class="offcanvas__currency-list tp-currency-list">
                 <li>USD</li>
                 <li>ERU</li>
                 <li>BDT</li>
                 <li>INR</li>
-              </ul>
+              </ul> -->
             </div>
             <div class="offcanvas__select language">
               <div
                 class="offcanvas__lang d-flex align-items-center justify-content-md-end"
               >
                 <div class="offcanvas__lang-img mr-15">
-                  <img src="assets/img/icon/language-flag.png" alt="" />
+                  <img
+                    src="assets/img/Fasion/flag.jpeg"
+                    alt=""
+                    style="height: 20px; width: auto"
+                  />
                 </div>
                 <div class="offcanvas__lang-wrapper">
                   <span
@@ -195,12 +198,12 @@
                     id="tp-offcanvas-lang-toggle"
                     >English</span
                   >
-                  <ul class="offcanvas__lang-list tp-lang-list">
+                  <!-- <ul class="offcanvas__lang-list tp-lang-list">
                     <li>Spanish</li>
                     <li>Portugese</li>
                     <li>American</li>
                     <li>Canada</li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
@@ -217,7 +220,7 @@
         <div class="row row-cols-5">
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <a href="shop.html" class="tp-mobile-item-btn">
+              <a href="shop-masonary.html" class="tp-mobile-item-btn">
                 <i class="flaticon-store"></i>
                 <span>Store</span>
               </a>
@@ -225,16 +228,19 @@
           </div>
           <div class="col">
             <div class="tp-mobile-item text-center">
-              <button class="tp-mobile-item-btn tp-search-open-btn">
+              <a href="shop.html" class="tp-mobile-item-btn">
+                <!-- <button class="tp-mobile-item-btn tp-search-open-btn"> -->
                 <i class="flaticon-search-1"></i>
                 <span>Search</span>
-              </button>
+              </a>
+              <!-- </button> -->
             </div>
           </div>
           <div class="col">
             <div class="tp-mobile-item text-center">
               <a href="wishlist.html" class="tp-mobile-item-btn">
                 <i class="flaticon-love"></i>
+
                 <span>Wishlist</span>
               </a>
             </div>
@@ -7427,10 +7433,10 @@
     </main>
 
     <!-- footer area start -->
-    <footer>
+    <footer style="margin-bottom: -378px">
       <div
-        class="tp-footer-area tp-footer-style-2 tp-footer-style-primary tp-footer-style-6"
-        data-bg-color="#F4F7F9"
+        class="tp-footer-area tp-footer-style-2"
+        data-bg-color="footer-bg-white"
       >
         <div class="tp-footer-top pt-95 pb-40">
           <div class="container">
@@ -7440,13 +7446,19 @@
                   <div class="tp-footer-widget-content">
                     <div class="tp-footer-logo">
                       <a href="index.html">
-                        <img src="assets/img/logo/logo.svg" alt="logo" />
+                        <img
+                          src="assets/img/Fasion/logo1.png"
+                          alt="logo"
+                          style="margin-left: -30px"
+                        />
                       </a>
                     </div>
                     <p class="tp-footer-desc">
-                      We are a team of designers and developers that create high
-                      quality WordPress
+                      We are a team of expert designers and craftsmen,
+                      specializing in creating high-quality, customized fashion
+                      pieces tailored to your unique style.
                     </p>
+
                     <div class="tp-footer-social">
                       <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                       <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -7600,15 +7612,15 @@
                 <div class="col-md-6">
                   <div class="tp-footer-copyright">
                     <p>
-                      © 2023 All Rights Reserved | HTML Template by
-                      <a href="index.html">Themepure</a>.
+                      © 2025 All Rights Reserved | by
+                      <a href="index.html">Khazoor</a>.
                     </p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="tp-footer-payment text-md-end">
                     <p>
-                      <img src="assets/img/footer/footer-pay.png" alt="" />
+                      <img src="assets/img/footer/footer-pay-2.png" alt="" />
                     </p>
                   </div>
                 </div>
